refctoring and finalizing the project

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-  <section id="title">
+  <section class="coloured-section" id="title">
     <div class="container-fluid">
       <!-- Nav Bar -->
       <navbar class="navbar navbar-expand-lg navbar-dark">
@@ -60,7 +60,7 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h1>Meet new and interesting dogs nearby.</h1>
+          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button">
             <i class="fa-brands fa-apple"></i> Download
           </button>
@@ -78,34 +78,36 @@
 
   <!-- Features -->
 
-  <section id="features">
-    <div class="row">
-      <div class="feature-box col-lg-4">
-        <i class="icon fa-solid fa-circle-check fa-4x"></i>
-        <h3>Easy to use.</h3>
-        <p>So easy to use, even your dog could do it.</p>
-      </div>
+  <section class="white" id="features">
+    <div class="container-fluid">
 
-      <div class="feature-box col-lg-4">
-        <i class="icon fa-sharp fa-solid fa-bullseye fa-4x"></i>
-        <h3>Elite Clientele</h3>
-        <p>We have all the dogs, the greatest dogs.</p>
-      </div>
+      <div class="row">
+        <div class="feature-box col-lg-4">
+          <i class="icon fa-solid fa-circle-check fa-4x"></i>
+          <h3>Easy to use.</h3>
+          <p>So easy to use, even your dog could do it.</p>
+        </div>
 
-      <div class="feature-box col-lg-4">
-        <i class="icon fa-solid fa-heart fa-4x"></i>
-        <h3>Guaranteed to work.</h3>
-        <p>Find the love of your dog's life or your money back.</p>
+        <div class="feature-box col-lg-4">
+          <i class="icon fa-sharp fa-solid fa-bullseye fa-4x"></i>
+          <h3>Elite Clientele</h3>
+          <p>We have all the dogs, the greatest dogs.</p>
+        </div>
+
+        <div class="feature-box col-lg-4">
+          <i class="icon fa-solid fa-heart fa-4x"></i>
+          <h3>Guaranteed to work.</h3>
+          <p>Find the love of your dog's life or your money back.</p>
+        </div>
       </div>
-    </div>
   </section>
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section class="coloured-section" id="testimonials">
     <div id="testimonial-carousel" class="carousel slide" data-bs-ride="false" data-interval="1000" data-pause="hover">
       <div class="carousel-inner">
-        <div class="carousel-item active">
+        <div class="carousel-item container-fluid active">
           <h2 class="cursive">
             I no longer have to sniff other dogs for love. I've found the
             hottest Corgi on TinDog. Woof.
@@ -113,7 +115,7 @@
           <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile" />
           <em>Pebbles, New York</em>
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item container-fluid ">
           <h2 class="cursive testimonial-text">
             My dog used to be so lonely, but with TinDog's help, they've found
             the love of their life. I think.
@@ -133,7 +135,7 @@
 
   <!-- Press -->
 
-  <section id="press">
+  <section class="coloured-section" id="press">
     <img class="press-logo" src="images/techcrunch.png" alt="tc-logo" />
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo" />
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo" />
@@ -142,7 +144,7 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section class="white" id="pricing">
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
@@ -209,22 +211,26 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
-    <h3 class="cta-head">Find the True Love of Your Dog's Life Today.</h3>
-    <button class="download-button cta-btn btn btn-lg btn-dark" type="button"> <i
-        class="fa-brands fa-apple"></i>Download</button>
-    <button class="download-button cta-btn btn btn-lg btn-light" type="button"> <i
-        class="fa-brands fa-google-play"></i>Download</button>
+  <section class="coloured-section" id="cta">
+    <div class="container-fluid">
+      <h3 class="cta-head">Find the True Love of Your Dog's Life Today.</h3>
+      <button class="download-button cta-btn btn btn-lg btn-dark" type="button"> <i
+          class="fa-brands fa-apple"></i>Download</button>
+      <button class="download-button cta-btn btn btn-lg btn-light" type="button"> <i
+          class="fa-brands fa-google-play"></i>Download</button>
+    </div>
   </section>
 
   <!-- Footer -->
 
-  <footer id="footer">
-    <i class="social-icon fa-2xl fa-brands fa-facebook"></i>
-    <i class="social-icon fa-2xl fa-brands fa-twitter"></i>
-    <i class="social-icon fa-2xl fa-brands fa-instagram"></i>
-    <i class="social-icon fa-2xl fa-solid fa-envelope"></i>
-    <p>© Copyright 2018 TinDog</p>
+  <footer class="white" id="footer">
+    <div class="container-fluid">
+      <i class="social-icon fa-2xl fa-brands fa-facebook"></i>
+      <i class="social-icon fa-2xl fa-brands fa-twitter"></i>
+      <i class="social-icon fa-2xl fa-brands fa-instagram"></i>
+      <i class="social-icon fa-2xl fa-solid fa-envelope"></i>
+      <p>© Copyright 2018 TinDog</p>
+    </div>
   </footer>
 </body>
 
